--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>mongodb</finalName>
     </build>
 
 </project>
