--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8089
 spring.data.mongodb.host=123.207.231.159
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=zzx
+
+log.dir=E:/project/logs
